Cycles Strange Light Falloff Behavior in CPU Viewport #92598

Closed
opened 2021-10-29 07:55:44 +02:00 by Zijun Zhou · 7 comments
Contributor

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.96

Blender Version
Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-10-28 23:23, hash: b43077ba3a
Worked: 2.93

Short description of error
[Please fill out a short description of the error here]
I have been talking about this bug in the devtalk thread: https://devtalk.blender.org/t/cycles-x-feedback/18598/368?u=eary But I think I should report it here as well
image.png
And this is how it's supposed to look like:
image.png

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
Based on the default startup or open the attached .blend file if you want

  1. Switch Render Engine to Cycles, leave it be CPU, Toggle Rendered view
  2. Add a plane, and scale it up by 100, zoom out to see the entire plane
  3. Select the default point light and give it an orangish color, and turn off the world lighting
  4. Go to Color Management tab and turn up the Exposure
    Now the problem is actually already there, it's just the light threshold in the advance tab making it not very visible, a proof is that turning on viewport OIDN can already see the shape of it.
  5. Turn the Light Threshold to 0 to see the problem clearly
  6. Change the color of the light randomly and see how strange the color circles change
  7. SwItch to GPU, see the issue gone
    Cycles CPU Viewport Strange Light Falloff Bug.blend
    Cycles Strange Light Falloff Bug.mp4
**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.96 **Blender Version** Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-10-28 23:23, hash: `b43077ba3a` Worked: 2.93 **Short description of error** [Please fill out a short description of the error here] I have been talking about this bug in the devtalk thread: https://devtalk.blender.org/t/cycles-x-feedback/18598/368?u=eary But I think I should report it here as well ![image.png](https://archive.blender.org/developer/F11589596/image.png) And this is how it's supposed to look like: ![image.png](https://archive.blender.org/developer/F11589623/image.png) **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] Based on the default startup or open the attached .blend file if you want 1. Switch Render Engine to Cycles, leave it be CPU, Toggle Rendered view 2. Add a plane, and scale it up by 100, zoom out to see the entire plane 3. Select the default point light and give it an orangish color, and turn off the world lighting 4. Go to Color Management tab and turn up the Exposure Now the problem is actually already there, it's just the light threshold in the advance tab making it not very visible, a proof is that turning on viewport OIDN can already see the shape of it. 5. Turn the Light Threshold to 0 to see the problem clearly 6. Change the color of the light randomly and see how strange the color circles change 7. SwItch to GPU, see the issue gone [Cycles CPU Viewport Strange Light Falloff Bug.blend](https://archive.blender.org/developer/F11589867/Cycles_CPU_Viewport_Strange_Light_Falloff_Bug.blend) [Cycles Strange Light Falloff Bug.mp4](https://archive.blender.org/developer/F11589872/Cycles_Strange_Light_Falloff_Bug.mp4)
Author
Contributor

Added subscriber: @Eary

Added subscriber: @Eary

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @brecht

Added subscriber: @brecht

The problem is that we are ignoring float denormals in the conversion to the half float display buffer. Normally they don't matter much, but if you use low light intensity with high exposure it can become visible.

The problem is that we are ignoring float denormals in the conversion to the half float display buffer. Normally they don't matter much, but if you use low light intensity with high exposure it can become visible.

This issue was referenced by blender/cycles@f0953c8f24

This issue was referenced by blender/cycles@f0953c8f24f0c1b859d3770647286220d963276d

This issue was referenced by 97ff37bf54

This issue was referenced by 97ff37bf54474efbce39653a1387ad55091d4964

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-11-05 22:05:42 +01:00
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#92598
No description provided.